@@ -4,19 +4,19 @@ import java.nio.charset.StandardCharsets;
 
 public class ZkUtil {
   public static String pathForAssignment(String groupId, String memberId) {
-    return String.format("/eventuate-tram/rabbitmq/consumer-assignments/%s/%s", groupId, memberId);
+    return "/eventuate-tram/rabbitmq/consumer-assignments/%s/%s".formatted(groupId, memberId);
   }
 
   public static String pathForMemberGroup(String groupId) {
-    return String.format("/eventuate-tram/rabbitmq/consumer-groups/%s", groupId);
+    return "/eventuate-tram/rabbitmq/consumer-groups/%s".formatted(groupId);
   }
 
   public static String pathForGroupMember(String groupId, String memberId) {
-    return String.format("/eventuate-tram/rabbitmq/consumer-groups/%s/%s", groupId, memberId);
+    return "/eventuate-tram/rabbitmq/consumer-groups/%s/%s".formatted(groupId, memberId);
   }
 
   public static String pathForLeader(String groupId) {
-    return String.format("/eventuate-tram/rabbitmq/consumer-leaders/%s", groupId);
+    return "/eventuate-tram/rabbitmq/consumer-leaders/%s".formatted(groupId);
   }
 
   public static String byteArrayToString(byte[] bytes) {
